--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -35,9 +35,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    position: relative;
-    padding-bottom: 148px;
-    border-radius: 0 0 26px 26px;
+    // position: relative;
+    // padding-bottom: 148px;
+    // border-radius: 0 0 26px 26px;
   }
 }
 
