--- a/source/sass/alphabet.scss
+++ b/source/sass/alphabet.scss
@@ -9,9 +9,12 @@
   z-index: 10;
   background-color: $white;
 
+  @include popup-shadow;
+
   @media (min-width: $tablet-width) {
     // display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 1fr 34%;
+    top: 445px;
     font-weight: 500;
     font-size: 20px;
     line-height: 20px;
@@ -19,6 +22,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    top: 503px;
     width: 730px;
   }
 }
@@ -50,13 +54,14 @@
     line-height: 20px;
     letter-spacing: 0.1em;
     padding: 27px 25px 23px 25px;
-    width: 63%;
+    width: 57%;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 20px 25px;
+    padding: 25px 25px;
     letter-spacing: 0.1em;
     margin-bottom: 34px;
+    width: 93%;
   }
 }
 
@@ -70,11 +75,13 @@
   @media (min-width: $tablet-width) {
     grid-template-columns: repeat(5, 55px);
     grid-template-rows: repeat(6, 70px);
+    padding: 36px 0 0 27px;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: repeat(5, 60px);
     gap: 15px;
+    padding: 0 0 0 25px;
   }
 }
 
@@ -144,6 +151,16 @@
   padding: 18px 19px;
   color: $special-grey;
   background-color: $white;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    padding: 38px 19px 18px 23px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 3px 19px 18px 32px;
+  }
 }
 
 .alphabet__countries-list--catalog {
@@ -174,5 +191,20 @@
   @media (min-width: $tablet-width) {
     font-weight: normal;
     margin-bottom: 10px;
+    letter-spacing: 0.01em;
+  }
+}
+
+.alphabet--open {
+  display: block;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+  }
+}
+
+.alphabet__country--long-name {
+  @media (min-width: $tablet-width) {
+    letter-spacing: -1px;
   }
 }
