--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -151,10 +151,12 @@
   @media (min-width: $desktop-width) {
     border-radius: 0 0 20px 20px;
     padding: 15px;
-    position: absolute;
-    top: 190px;
-    right: 0;
     width: 190px;
+    grid-column: 3 / -1;
+    grid-row: 2;
+    align-self: start;
+    justify-self: start;
+    margin: 0 0 25px 0;
   }
 }
 
@@ -217,6 +219,11 @@
     margin-left: -2px;
     padding: 29px 31px 27px 34px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 29%;
+    padding: 29px 38px 27px 34px;
+  }
 }
 
 .button--step-backwards {
@@ -235,7 +242,11 @@
 
   @media (min-width: $tablet-width) {
     width: 47%;
-    padding: 0px 0px 15px 71px;
+    padding: 0 0 15px 71px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 26%;
   }
 }
 
@@ -259,6 +270,10 @@
     height: 50px;
     background-color: transparent;
   }
+
+  @media (min-width: $desktop-width) {
+    right: -10px;
+  }
 }
 
 .button--calendar {
@@ -279,6 +294,10 @@
 
   @media (min-width: $tablet-width) {
     margin: 0 7px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: -7px;
   }
 }
 
@@ -391,10 +410,21 @@
 
 .button--previous {
   padding: 0;
+
+  @media (min-width: $desktop-width) {
+    margin-left: -7px;
+  }
 }
 
 .button--next {
   padding: 0;
+}
+
+.button__arrow-icon {
+  @media (min-width: $desktop-width) {
+    width: 16px;
+    height: 16px;
+  }
 }
 
 .button__arrow-icon--reflect {
