--- a/source/sass/calendar.scss
+++ b/source/sass/calendar.scss
@@ -8,6 +8,10 @@
   @media (min-width: $tablet-width) {
     margin-bottom: 47px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 52px;
+  }
 }
 
 .calendar__header {
@@ -18,6 +22,10 @@
 
   @media (min-width: $tablet-width) {
     margin-bottom: 37px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 13px;
   }
 }
 
@@ -50,6 +58,11 @@
     font-size: 18px;
     line-height: 18px;
   }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+    padding-bottom: 19px;
+  }
 }
 
 .calendar__text-mobile {
@@ -65,6 +78,11 @@
 
   @media (min-width: $tablet-width) {
     display: inline;
+    padding-left: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 6px;
   }
 }
 
@@ -86,6 +104,14 @@
     @media (min-width: $tablet-width) {
       margin-top: 90%;
     }
+
+    @media (min-width: $desktop-width) {
+      margin-top: 71px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 144px;
   }
 }
 
@@ -121,6 +147,10 @@
     border: 2px solid $special-orange-borders;
     background-color: $basic-blue-dark;
     color: $white;
+  }
+
+  @media (min-width: $desktop-width) {
+    border: 1px solid $special-grey-borders;
   }
 }
 
