--- a/source/sass/page-body.scss
+++ b/source/sass/page-body.scss
@@ -66,9 +66,11 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 50%;
-    padding: 62px 0 0 124px;
-    margin-bottom: 171px;
+    grid-column: 1 / -1;
+    grid-row: 1;
+    padding: 113px 0 63px 123px;
+    width: auto;
+    margin: -1px 0 0 0;
   }
 }
 
