--- a/source/sass/planner.scss
+++ b/source/sass/planner.scss
@@ -12,6 +12,8 @@
 
   @media (min-width: $desktop-width) {
     padding: 55px 60px 70px 60px;
+    border-radius: 53px 53px 0 0;
+    margin-top: -86px;
   }
 }
 
@@ -21,7 +23,23 @@
   justify-content: space-between;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 44px;
+    margin-bottom: 46px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    margin-bottom: 42px;
+    align-items: flex-start;
+  }
+}
+
+.planner__header--step-3 {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 38px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
   }
 }
 
@@ -55,7 +73,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 0;
+    padding: 0;
   }
 }
 
@@ -75,6 +93,17 @@
   @media (min-width: $desktop-width) {
     padding: 73px 159px 106px 159px;
     margin-bottom: 44px;
+    border-radius: 53px;
+  }
+}
+
+.planner__step--1 {
+  @media (min-width: $desktop-width) {
+    padding: 105px 159px 106px 159px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 93px;
   }
 }
 
@@ -82,17 +111,35 @@
   position: relative;
   padding-bottom: 5px;
 
+  &::before {
+    @media (min-width: $tablet-width) {
+      position: absolute;
+      content: "";
+      width: 1px;
+      bottom: 0;
+      background-color: $special-grey-borders;
+      height: 50%;
+      top: 230px;
+      right: 178px;
+    }
+
+    @media (min-width: $desktop-width) {
+      right: 383px;
+      top: 271px;
+      height: 60%;
+    }
+  }
+
   @media (min-width: $tablet-width) {
     padding-bottom: 40px;
     margin-bottom: 55px;
   }
 
-
-  // &::before {
-  //   position: absolute;
-  //   width: 1;
-  //   height: ;
-  // }
+  @media (min-width: $desktop-width) {
+    padding-top: 100px;
+    padding-bottom: 87px;
+    margin-bottom: 48px;
+  }
 }
 
 .planner__step--3 {
@@ -100,6 +147,11 @@
 
   @media (min-width: $tablet-width) {
     padding-bottom: 38px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 100px;
+    padding-bottom: 92px;
   }
 }
 
@@ -116,17 +168,33 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 62px;
+    margin-bottom: 49px;
+    padding-right: 400px;
+    border-bottom: 1px solid $special-grey-borders;
   }
 }
 
 .planner__info--step-2 {
   @media (min-width: $tablet-width) {
     padding-right: 100px;
-    margin-top: -7px;
+    margin-top: -13px;
     margin-bottom: 42px;
     border-bottom: 1px solid $special-grey-borders;
     padding-bottom: 29px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: -7px;
+    padding-right: 56%;
+    padding-bottom: 52px;
+    margin-bottom: 62px;
+  }
+}
+
+.planner__info--step-3 {
+  @media (min-width: $desktop-width) {
+    padding-bottom: 55px;
+    padding-top: 40px;
   }
 }
 
@@ -139,6 +207,8 @@
 
   @media (min-width: $desktop-width) {
     justify-content: space-between;
+    border-top: 1px solid #cbced9;
+    margin-bottom: 4px;
   }
 }
 
@@ -155,7 +225,11 @@
   }
 
   @media (min-width: $desktop-width) {
+    padding-top: 0;
     flex-basis: 50%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border: none;
   }
 }
 
@@ -183,6 +257,18 @@
     line-height: 18px;
     letter-spacing: 0.1em;
     margin-bottom: 2px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-row: 1;
+    grid-column: 1 / -1;
+    padding: 25px 22px 18px 0;
+  }
+}
+
+.planner__label--duration {
+  @media (min-width: $desktop-width) {
+    padding-top: 0;
   }
 }
 
@@ -215,6 +301,11 @@
       height: 36px;
       background-size: 36px 36px;
     }
+
+    @media (min-width: $desktop-width) {
+      top: 30px;
+      left: 0;
+    }
   }
 
   @media (min-width: $tablet-width) {
@@ -224,10 +315,13 @@
     line-height: 20px;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    margin-bottom: 34px;
     order: 0;
     padding: 7px 10px 33px 58px;
     margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 37px 0 33px 57px;
   }
 }
 
@@ -269,6 +363,21 @@
 
   @media (min-width: $tablet-width) {
     padding: 22px 14px 8px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-row: 1;
+    grid-column: 1 / -1;
+    width: 33%;
+    justify-self: center;
+    padding: 13px 20% 8px 42%;
+  }
+}
+
+.planner__buttons-group--duration {
+  @media (min-width: $desktop-width) {
+    padding-top: 0;
+    margin-top: -9px;
   }
 }
 
@@ -341,8 +450,17 @@
 
 .planner__countries--add-country {
   margin-bottom: 25px;
+
   &::after {
     display: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 36px;
   }
 }
 
@@ -370,6 +488,11 @@
       width: 14px;
       height: 14px;
     }
+
+    @media (min-width: $desktop-width) {
+      top: 37%;
+      left: 77%;
+    }
   }
 
   @media (min-width: $tablet-width) {
@@ -380,6 +503,10 @@
     line-height: 20px;
     letter-spacing: 0.1em;
     margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 73% auto;
   }
 }
 
@@ -400,6 +527,10 @@
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 69% auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 73% auto;
   }
 }
 
@@ -464,11 +595,11 @@
 
   @media (min-width: $tablet-width) {
     border: none;
-    padding: 0px 39px 11px 11px;
+    padding: 0 39px 11px 11px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0  0  15px 40px;
+    padding: 0 69px 10px 0;
   }
 }
 
@@ -503,6 +634,10 @@
     max-height: 141px;
     padding: 20px 30px 16px 20px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 73%;
+  }
 }
 
 .planner__textarea--active {
@@ -511,6 +646,11 @@
 
   @media (min-width: $tablet-width) {
     margin-bottom: 44px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 52px;
+    padding: 25px 21px 16px 20px;
   }
 }
 
@@ -541,12 +681,20 @@
       width: 14px;
       height: 14px;
     }
+
+    @media (min-width: $desktop-width) {
+      right: 218px;
+    }
   }
 
   @media (min-width: $tablet-width) {
     font-size: 30px;
     line-height: 30px;
     padding: 21px 31px 25px 3px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 21px 114px 25px 3px;
   }
 }
 
@@ -569,6 +717,10 @@
       right: -9px;
       top: 42px;
       border-width: 0 0 0 2px;
+    }
+
+    @media (min-width: $desktop-width) {
+      right: 211px;
     }
   }
 }
