--- a/source/sass/plans.scss
+++ b/source/sass/plans.scss
@@ -11,7 +11,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 54px 58px 64px 124px;
+    padding: 54px 58px 100px 124px;
+    border-radius: 53px 53px 0 0;
+    top: -36px;
   }
 }
 
@@ -24,6 +26,10 @@
     font-size: 36px;
     line-height: 36px;
     margin: 0 0 48px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 50px;
   }
 }
 
@@ -55,6 +61,10 @@
 
   @media (min-width: $desktop-width) {
     @include flex;
+
+    align-items: baseline;
+    padding: 10px 26px 3px 40px;
+    margin-bottom: 15px;
   }
 }
 
@@ -66,6 +76,10 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 38px;
   }
 }
 
@@ -83,10 +97,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    flex-basis: 50%;
-  }
-
-  @media (min-width: $desktop-width) {
+    flex-basis: 49%;
     border: none;
   }
 }
@@ -109,7 +120,7 @@
 
   @media (min-width: $desktop-width) {
     display: block;
-    flex-basis: 50%;
+    flex-basis: 49%;
   }
 }
 
