--- a/source/sass/profile.scss
+++ b/source/sass/profile.scss
@@ -7,6 +7,10 @@
   @media (min-width: $tablet-width) {
     padding: 0 0 84px 0;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 100px;
+  }
 }
 
 .profile__title {
@@ -37,7 +41,7 @@
 
 .profile__title--tags {
   @media (min-width: $desktop-width) {
-    left: 39px;
+    left: 61px;
     padding: 0 14px;
   }
 }
@@ -52,9 +56,11 @@
   }
 
   @media (min-width: $desktop-width) {
-    position: relative;
-    z-index: 2;
-    margin-top: -190px;
+    display: grid;
+    grid-template-columns: 1fr 12% 24%;
+    // position: relative;
+    // z-index: 2;
+    // margin-top: -190px;
   }
 }
 
@@ -79,9 +85,11 @@
   }
 
   @media (min-width: $desktop-width) {
-    order: 5;
-    flex-basis: 21%;
-    margin: 0 60px 0 0;
+    grid-column: 2 / -1;
+    grid-row: 3;
+    margin: 0 61px 0 0;
+    width: 59%;
+    justify-self: end;
   }
 }
 
@@ -95,9 +103,10 @@
   }
 
   @media (min-width: $desktop-width) {
-    order: 4;
-    flex-basis: 47%;
-    margin: 0 140px 0 124px;
+    grid-column: 1 / 3;
+    grid-row: 3;
+    margin: 0 0 0 124px;
+    width: 61%;
   }
 }
 
@@ -123,13 +132,17 @@
 }
 
 .profile__image {
-
   @media (min-width: $tablet-width) {
     order: 4;
     margin: 0 75px 31px 0;
   }
 
   @media (min-width: $desktop-width) {
-    order: 3;
+    grid-column: 3 / -1;
+    grid-row: 1;
+    z-index: 2;
+    justify-self: start;
+    align-self: end;
+    margin: 0 0 -7px 0;
   }
 }
