--- a/source/sass/calendar.scss
+++ b/source/sass/calendar.scss
@@ -25,7 +25,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 13px;
+    margin-bottom: 16px;
   }
 }
 
@@ -82,7 +82,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 6px;
+    padding-left: 10px;
   }
 }
 
@@ -134,7 +134,7 @@
 
   @media (min-width: $desktop-width) {
     @include flex;
-    padding: 10px;
+    padding: 12px;
   }
 }
 
@@ -158,6 +158,20 @@
   background-color: $basic-blue-dark;
   color: $white;
   font-weight: 500;
+}
+
+.calendar__arrival-date {
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    text-align: left;
+  }
+}
+
+.calendar__leaving-date {
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    text-align: left;
+  }
 }
 
 .calendar__button--current {
