--- a/source/sass/planner.scss
+++ b/source/sass/planner.scss
@@ -23,19 +23,35 @@
   justify-content: space-between;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 46px;
+    margin-bottom: 44px;
   }
 
   @media (min-width: $desktop-width) {
     position: relative;
-    margin-bottom: 42px;
+    margin-bottom: 46px;
     align-items: flex-start;
+  }
+}
+
+.planner__header--step-1 {
+  @media (min-width: $desktop-width) {
+    margin-bottom: 42px;
+  }
+}
+
+.planner__header--step-2 {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 47px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 41px;
   }
 }
 
 .planner__header--step-3 {
   @media (min-width: $tablet-width) {
-    margin-bottom: 38px;
+    margin-bottom: 41px;
   }
 
   @media (min-width: $desktop-width) {
@@ -85,7 +101,7 @@
   background-color: $white;
 
   @media (min-width: $tablet-width) {
-    padding: 48px 40px 43px 40px;
+    padding: 50px 40px 43px 38px;
     border-radius: 26px;
     margin-bottom: 39px;
   }
@@ -103,6 +119,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    padding-top: 101px;
     padding-bottom: 93px;
   }
 }
@@ -114,7 +131,7 @@
   &::before {
     @media (min-width: $tablet-width) {
       position: absolute;
-      top: calc(29% + 3px);
+      top: calc(29% + 7px);
       bottom: 20%;
       right: calc(23% + 38px);
       width: 1px;
@@ -123,8 +140,8 @@
       background-color: $special-grey-borders;
     }
 
-    @media (min-width: 1096px) {
-      top: calc(27% + 3px);
+    @media (min-width: 1108px) {
+      top: calc(27% + 4px);
     }
 
     @media (min-width: $desktop-width) {
@@ -134,23 +151,26 @@
     }
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $tablet-width) and (max-width: 1439px) {
+    padding: 48px 40px 40px 41px;
     padding-bottom: 40px;
-    margin-bottom: 55px;
+    padding-top: 48px;
+    padding-left: 41px;
+    margin-bottom: 52px;
   }
 
   @media (min-width: $desktop-width) {
     padding-top: 100px;
-    padding-bottom: 87px;
-    margin-bottom: 48px;
+    padding-bottom: 92px;
+    margin-bottom: 43px;
   }
 }
 
 .planner__step--3 {
   padding-bottom: 6px;
 
-  @media (min-width: $tablet-width) {
-    padding-bottom: 38px;
+  @media (min-width: $tablet-width) and (max-width: 1439px) {
+    padding: 47px 40px 38px 40px;
   }
 
   @media (min-width: $desktop-width) {
@@ -178,13 +198,20 @@
   }
 }
 
+.planner__info--step-1 {
+  @media (min-width: $desktop-width) {
+    border: none;
+    margin-bottom: 32px;
+  }
+}
+
 .planner__info--step-2 {
   @media (min-width: $tablet-width) {
     padding-right: 100px;
+    padding-bottom: 32px;
     margin-top: -13px;
     margin-bottom: 42px;
     border-bottom: 1px solid $special-grey-borders;
-    padding-bottom: 29px;
   }
 
   @media (min-width: $desktop-width) {
@@ -196,9 +223,16 @@
 }
 
 .planner__info--step-3 {
+  @media (min-width: $tablet-width) {
+    padding-bottom: 33px;
+    border-bottom: 1px solid $special-grey-borders;
+    margin-bottom: 3px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-bottom: 55px;
     padding-top: 40px;
+    margin-bottom: 48px;
   }
 }
 
@@ -210,6 +244,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    padding-top: 19px;
     justify-content: space-between;
     border-top: 1px solid #cbced9;
     margin-bottom: 4px;
@@ -234,7 +269,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     border: none;
+    margin-bottom: 15px;
   }
+}
+
+.planner__input-container--duration {
+  margin-bottom: 18px;
 }
 
 .planner__input-icon {
@@ -267,6 +307,7 @@
     grid-row: 1;
     grid-column: 1 / -1;
     padding: 25px 22px 18px 0;
+    letter-spacing: 0.01em;
   }
 }
 
@@ -460,11 +501,11 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 30px;
+    margin-bottom: 33px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 36px;
+    margin-bottom: 42px;
   }
 }
 
@@ -589,6 +630,12 @@
   }
 }
 
+.planner__destination-name--choose-country {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 10px;
+  }
+}
+
 .planner__icon {
   @include flex;
   @include flex-center;
@@ -641,11 +688,12 @@
     font-size: 20px;
     line-height: 23px;
     max-height: 141px;
-    padding: 20px 30px 16px 20px;
+    padding: 15px 30px 16px 20px;
   }
 
   @media (min-width: $desktop-width) {
     width: 73%;
+    padding: 24px 30px 16px 23px;
   }
 }
 
@@ -654,11 +702,11 @@
   margin-bottom: 14px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 44px;
+    margin-bottom: 39px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 52px;
+    margin-bottom: 55px;
     padding: 25px 21px 16px 20px;
   }
 }
@@ -699,11 +747,12 @@
   @media (min-width: $tablet-width) {
     font-size: 30px;
     line-height: 30px;
-    padding: 21px 31px 25px 3px;
+    padding: 24px 31px 25px 0;
+    letter-spacing: 0.01em;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 21px 114px 25px 3px;
+    padding: 21px 114px 25px 0;
   }
 }
 
@@ -738,5 +787,19 @@
   @media (min-width: $tablet-width) {
     @include flex;
     justify-content: space-between;
+  }
+}
+
+.planner__flag--bosnia {
+  @media (min-width: $desktop-width) {
+    position: relative;
+    top: 6px;
+  }
+}
+
+.planner__flag--czech {
+  @media (min-width: $desktop-width) {
+    position: relative;
+    top: 9px;
   }
 }
