--- a/source/sass/profile.scss
+++ b/source/sass/profile.scss
@@ -46,6 +46,13 @@
   }
 }
 
+.profile__title--transport {
+  @media (min-width: $tablet-width) and (max-width: 1439px) {
+    bottom: -32px;
+    left: 147px;
+  }
+}
+
 .profile__content {
   @include flex;
   @include flex-center;
