--- a/source/sass/profile.scss
+++ b/source/sass/profile.scss
@@ -118,9 +118,9 @@
 }
 
 .profile__tags {
+  font-family: $main-font;
   flex-basis: 100%;
   width: 100%;
-  letter-spacing: -2.5px;
 
   @include text-area-reset;
   text-align: left;
@@ -132,7 +132,6 @@
 
   @media (min-width: $tablet-width) {
     text-align: left;
-    letter-spacing: -2.9px;
     font-size: 20px;
     line-height: 22px;
   }
