--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 @import "variables.scss";
 @import "mixins.scss";
 @import "global.scss";
+@import "wrapper.scss";
 @import "page-body.scss";
 @import "page-header.scss";
 @import "menu.scss";
