--- a/source/sass/alphabet.scss
+++ b/source/sass/alphabet.scss
@@ -27,10 +27,6 @@
   }
 }
 
-.alphabet--catalog {
-  flex-basis: 100%;
-}
-
 .alphabet__title {
   color: white;
 
@@ -83,6 +79,13 @@
     gap: 15px;
     padding: 0 0 0 25px;
   }
+}
+
+.alphabet--catalog {
+  // display: block;
+  width: 100%;
+  top: 0;
+  // flex-basis: 100%;
 }
 
 .alphabet__list--catalog {
