--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -361,18 +361,40 @@
 }
 
 .button--open-filter {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 20px;
+  position: relative;
+  top: -18px;
+  z-index: 1;
+  padding: 40px 20px 15px 2px;
   width: 100%;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  border-radius: 20px;
+  border-radius: 0 0 20px 20px;
   background-color: $special-blue-grey-light;
+
+  &::before {
+    position: absolute;
+    bottom: 15px;
+    left: 25px;
+    width: 15px;
+    height: 15px;
+    content: "";
+    background-image: url("../img/icon-decorative-filter.svg");
+    background-repeat: no-repeat;
+  }
+
+  &::after {
+    position: absolute;
+    bottom: 7px;
+    right: 26px;
+    width: 20px;
+    height: 20px;
+    content: "";
+    background-image: url("../img/icon-three-dots-for-filter.svg");
+    background-repeat: no-repeat;
+  }
 
   @media (min-width: $tablet-width) {
     display: none;
@@ -386,7 +408,8 @@
 .button--companion-submit {
   background-color: $white;
   width: 100%;
-  padding: 12px 73px 12px 72px;
+  padding: 14px 73px 10px 71px;
+  margin-top: 3px;
   font-style: normal;
   border-radius: 25px;
   font-weight: bold;
@@ -399,9 +422,9 @@
 .button--catalog {
   grid-area: button;
   margin: 0;
-  font-size: 20px;
-  line-height: 20px;
-  padding: 16px 33px 14px 33px;
+  font-size: 17px;
+  line-height: 17px;
+  padding: 14px 33px 9px 41px;
 
   @media (min-width: $desktop-width) {
     min-width: 150px;
