--- a/source/sass/countries-filter.scss
+++ b/source/sass/countries-filter.scss
@@ -1,4 +1,5 @@
 .countries-filter-popup {
+  display: none;
   padding-bottom: 28px;
 
   @media (min-width: $tablet-width) {
@@ -9,3 +10,9 @@
     grid-column: 1 / -1;
   }
 }
+
+// .countries-filter-popup--open {
+//   display: block;
+
+//   @media (min-width)
+// }
