--- a/source/sass/filtered.scss
+++ b/source/sass/filtered.scss
@@ -17,9 +17,20 @@
   }
 }
 
+.filtered__item--catalog {
+  padding: 15px 26px 14px 18px;
+  margin-bottom: 10px;
+
+  &:last-child {
+    margin-bottom: 20px;
+  }
+}
+
 .filtered__show-more-button {
+  position: relative;
   display: inline-block;
   width: 100%;
+  padding-left: 15px;
   margin-bottom: 18px;
   text-align: center;
   font-style: normal;
@@ -28,6 +39,35 @@
   line-height: 30px;
   text-transform: uppercase;
   color: $basic-blue-dark;
+
+  &::before {
+    position: absolute;
+    left: 60px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 18px;
+    height: 18px;
+    content: "";
+    background-image: url("../img/icon-plus-more.svg");
+    background-repeat: no-repeat;
+  }
+
+  &:hover::before {
+    opacity: 0.6;
+  }
+
+  &:active::before {
+    opacity: 0.3;
+  }
+
+}
+
+.filtered__icon-show-more-arrow--reflect {
+  transform: scale(-1, 1);
+}
+
+.filtered__plus-icon {
+  margin-right: 16px;
 }
 
 .filtered__pagination-container {
