--- a/source/sass/flag-list.scss
+++ b/source/sass/flag-list.scss
@@ -13,6 +13,8 @@
 }
 
 .flag-list--catalog {
+  padding: 10px 0 4px 7px;
+
   @media (min-width: $tablet-width) {
     justify-content: flex-start;
     grid-area: flag-list;
@@ -47,9 +49,15 @@
   }
 }
 
+.flag-list__text--catalog {
+  margin: 0 0 0 13px;
+  text-transform: uppercase;
+}
+
 .flag-list__item--companions-filtered {
   flex-basis: 100%;
   align-items: center;
+  margin-bottom: 6px;
 
   @media (min-width: $tablet-width) {
     flex-basis: initial;
