--- a/source/sass/user-score.scss
+++ b/source/sass/user-score.scss
@@ -27,6 +27,15 @@
   }
 }
 
+.user-score--catalog {
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding-right: 5px;
+  background-color: inherit;
+  color: $basic-blue;
+}
+
 .user-score__score {
   border-bottom: 1px solid $white;
   font-weight: bold;
@@ -82,6 +91,14 @@
   }
 }
 
+.user-score__score--catalog {
+  margin: 0;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 24px;
+}
+
 .user-score__progress-ring {
   position: absolute;
   right: -30px;
@@ -107,6 +124,13 @@
   }
 }
 
+.user-score__progress-ring--catalog {
+  top: -10px;
+  right: -6px;
+  width: 47px;
+  height: 47px;
+}
+
 .user-score__progress-ring__circle {
   transition: 0.35s stroke-dashoffset;
   transform: rotate(-90deg);
@@ -123,4 +147,12 @@
   @media (min-width: $desktop-width) {
     margin-right: 10px;
   }
+}
+
+.user-score__text--catalog {
+  display: none;
+}
+
+.user-score__progress-ring__circle--catalog {
+  stroke-width: 6px;
 }
