--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,7 @@ $main-font: "Bloggersans", "Tahoma", sans-serif;
 // colors
 $black: #000000;
 $white: #ffffff;
+$red: #f02323;
 $basic-blue: #161c35;
 $basic-blue-opacity: rgba($basic-blue, 0.3);
 $basic-white-opacity: rgba($white, 0.3);
@@ -23,6 +24,8 @@ $special-midnight:#192144;
 $special-midnight-opacity: rgba($special-midnight, 0.3);
 $special-green: #81e31e;
 $special-red: #f97676;
+$special-light-red: #f9eaea;
+$special-hover-red: #f9d8d8;
 $special-blue: #132576;
 $special-grey-light: #f3f4f8;
 $special-grey-borders: #cbced9;
