--- a/source/sass/companions-selection.scss
+++ b/source/sass/companions-selection.scss
@@ -37,6 +37,7 @@
   display: none;
   padding-top: 5px;
   padding-bottom: 7px;
+
   @media (min-width: $tablet-width) and (max-width: 1439px) {
     @include flex;
 
@@ -48,7 +49,6 @@
   @media (min-width: $desktop-width) {
     display: none;
   }
-
 }
 
 
@@ -80,6 +80,7 @@
   text-transform: uppercase;
   cursor: pointer;
   padding: 12px 0 9px 0;
+  color: $basic-blue-dark;
 
   &::after {
     position: absolute;
