--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -39,20 +39,20 @@
   }
 }
 
-.button--show-all-countries {
-  display: none;
+// .button--show-all-countries {
+//   display: none;
 
-  @media (min-width: $tablet-width) {
-    display: block;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 20px;
-    text-transform: uppercase;
-    flex-basis: 30%;
-    background-color: inherit;
-  }
-}
+//   @media (min-width: $tablet-width) {
+//     display: block;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 20px;
+//     line-height: 20px;
+//     text-transform: uppercase;
+//     flex-basis: 30%;
+//     background-color: inherit;
+//   }
+// }
 
 .button--business-rates {
   display: flex;
@@ -343,6 +343,7 @@
 }
 
 .button--minimize {
+  display: none;
   width: 100%;
   padding: 10px 10px 9px 10px;
   font-style: normal;
@@ -357,52 +358,69 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 20px;
+    order: 4;
   }
 }
 
 .button--open-filter {
   position: relative;
-  top: -18px;
-  z-index: 1;
-  padding: 40px 20px 15px 2px;
   width: 100%;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  border-radius: 0 0 20px 20px;
   background-color: $special-blue-grey-light;
+
+  &:hover {
+    background-color: $special-blue-grey-light;
+  }
 
   &::before {
     position: absolute;
-    bottom: 15px;
-    left: 25px;
+    bottom: 1px;
+    left: 23px;
     width: 15px;
     height: 15px;
     content: "";
     background-image: url("../img/icon-decorative-filter.svg");
     background-repeat: no-repeat;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
   }
 
   &::after {
     position: absolute;
-    bottom: 7px;
-    right: 26px;
+    bottom: -7px;
+    right: 6px;
     width: 20px;
     height: 20px;
     content: "";
     background-image: url("../img/icon-three-dots-for-filter.svg");
     background-repeat: no-repeat;
+
+    @media (min-width: $tablet-width) {
+      background-image: url("../img/icon-three-dots-for-filter-tablet.svg");
+      width: 30px;
+      bottom: 15px;
+      right: 50px;
+    }
   }
 
   @media (min-width: $tablet-width) {
-    display: none;
+    font-size: 20px;
+    line-height: 20px;
+    order: 2;
+    flex: 1;
+    text-align: left;
+    padding: 10px 25px 0 25px;
   }
 
-  @media (min-width: $desktop-width) {
-    display: none;
-  }
+  // @media (min-width: $desktop-width) {
+  //   display: none;
+  // }
 }
 
 .button--companion-submit {
@@ -417,14 +435,33 @@
   line-height: 17px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    padding: 18px 73px 12px 71px;
+  }
 }
 
 .button--catalog {
-  grid-area: button;
+  grid-area: button-likes;
   margin: 0;
   font-size: 17px;
   line-height: 17px;
   padding: 14px 33px 9px 41px;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    top: 19px;
+    left: 29px;
+    width: 150px;
+    justify-content: center;
+    padding: 18px 0 12px 0;
+    font-size: 20px;
+    line-height: 20px;
+    text-transform: uppercase;
+    border-radius: 26px;
+  }
 
   @media (min-width: $desktop-width) {
     min-width: 150px;
@@ -454,4 +491,17 @@
   @media (min-width: $tablet-width) {
     transform: scale(-1, 1);
   }
+}
+
+.button--close-filter {
+  &::after {
+    background-image: url("../img/icon-close-filter.svg");
+    width: 25px;
+    height: 25px;
+  }
+}
+
+
+.button--visible {
+  display: block;
 }
