--- a/source/sass/companions-selection.scss
+++ b/source/sass/companions-selection.scss
@@ -4,6 +4,11 @@
   border-radius: 20px;
   background-color: $basic-yellow;
 
+  @media (min-width: $tablet-width) {
+    padding: 7px 34px 37px 34px;
+    margin-bottom: 41px;
+  }
+
   @media (min-width: $desktop-width) {
     grid-column: 2 / -1;
   }
@@ -17,8 +22,12 @@
   letter-spacing: 0.02em;
 
   @media (min-width: $tablet-width) {
+    border-bottom: 1px solid $special-yellow-grey-borders;
     font-size: 30px;
     line-height: 30px;
+    letter-spacing: normal;
+    padding-bottom: 37px;
+    margin-bottom: 26px;
   }
 }
 
@@ -30,6 +39,8 @@
 
   @media (min-width: $tablet-width) and (max-width: 1439px) {
     @include flex;
+    border: none;
+    margin-bottom: 9px;
   }
 }
 
@@ -63,8 +74,15 @@
 .companion-selection__item {
   margin-bottom: 10px;
 
+  &:first-child {
+    @media (min-width: $tablet-width) {
+      margin-right: 6px;
+    }
+  }
+
   @media (min-width: $tablet-width) and (max-width: 1439px) {
     flex: 1;
+    margin-bottom: 0;
   }
 }
 
@@ -91,6 +109,10 @@
     height: 10px;
     background-image: url("../img/icon-arrow-down.svg");
     background-repeat: no-repeat;
+
+    @media (min-width: $tablet-width) and (max-width: 1439px) {
+      display: none;
+    }
   }
 
   &:hover {
@@ -102,9 +124,28 @@
   }
 
   @media (min-width: $tablet-width) and (max-width: 1439px) {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
     text-align: left;
     flex-basis: 20%;
     color: $basic-blue-dark;
+  }
+}
+
+.companion-selection__filter--transport {
+  margin-bottom: 0;
+}
+
+.companion-selection__button--transport {
+  @media (min-width: $tablet-width) {
+    padding-top: 3px;
+  }
+}
+
+.companion-selection__filter--level {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 71px;
   }
 }
 
@@ -132,6 +173,30 @@
     height: 18px;
     border-radius: 4px;
     background-color: $white;
+
+    @media (min-width: $tablet-width) {
+      width: 24px;
+      height: 24px;
+      left: 3px;
+      top: 1px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    padding: 4px 0 0 38px;
+  }
+}
+
+.companion-selection__label--last {
+  @media (min-width: $tablet-width) {
+    padding-left: 46px;
+  }
+
+  &::before {
+    @media (min-width: $tablet-width) {
+      left: 12px;
+    }
   }
 }
 
