--- a/source/sass/countries-filter.scss
+++ b/source/sass/countries-filter.scss
@@ -1,15 +1,34 @@
-.countries-filter-popup {
-  display: none;
-  padding-bottom: 28px;
+.countries-filter {
+  position: relative;
+  box-sizing: border-box;
+  top: -18px;
+  z-index: 1;
+  padding: 38px 2px 16px 2px;
+  width: 100%;
+  border-radius: 0 0 20px 20px;
+  background-color: $special-blue-grey-light;
 
   @media (min-width: $tablet-width) {
     @include flex;
-  }
 
-  @media (min-width: $desktop-width) {
-    grid-column: 1 / -1;
+    top: -40px;
+    padding: 72px 23px 35px 23px;
+    border-radius: 0 0 56px 56px;
   }
 }
+
+// .countries-filter-popup {
+//   display: none;
+//   padding-bottom: 28px;
+
+//   @media (min-width: $tablet-width) {
+//     @include flex;
+//   }
+
+//   @media (min-width: $desktop-width) {
+//     grid-column: 1 / -1;
+//   }
+// }
 
 // .countries-filter-popup--open {
 //   display: block;
