--- a/source/sass/level-filter.scss
+++ b/source/sass/level-filter.scss
@@ -6,6 +6,7 @@
 
     @include flex;
     align-items: center;
+    margin: 0;
   }
 }
 
@@ -43,6 +44,13 @@
   line-height: 13px;
   letter-spacing: 0.06em;
   background-color: $white;
+
+  @media (min-width: $tablet-width) {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 0.04em;
+  }
 }
 
 .level-filter__separator {
@@ -67,6 +75,10 @@
   width: 100%;
   height: 2px;
   background: linear-gradient(to right, $special-blue-dark-opacity 30%, $basic-blue-dark 30%);
+
+  @media (min-width: $tablet-width) {
+    height: 3px;
+  }
 }
 
 .level-filter__toggle {
@@ -79,6 +91,13 @@
 
   &:hover {
     transform: scale(1.4);
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 13px;
+    height: 13px;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
 
