--- a/source/sass/tag-list.scss
+++ b/source/sass/tag-list.scss
@@ -20,9 +20,10 @@
   margin: 0;
 
   @media (min-width: $tablet-width) {
-    width: 100%;
+    width: 64%;
     grid-area: tag-list;
-    padding: 0;
+    padding: 0 0 0 35px;
+    margin-top: -10px;
   }
 }
 
