--- a/source/sass/wrapper.scss
+++ b/source/sass/wrapper.scss
@@ -2,10 +2,13 @@
   padding: 0 25px;
 
   @media (min-width: $tablet-width) {
-    padding: 40px 40px;
+    padding: 3px 40px 40px 40px;
   }
 
   @media (min-width: $desktop-width) {
     padding: 60px 60px;
+    display: grid;
+    grid-template-columns: 1fr 21.6%;
+    gap: 0 85px;
   }
 }
