--- a/source/sass/flag-list.scss
+++ b/source/sass/flag-list.scss
@@ -25,6 +25,7 @@
   @media (min-width: $desktop-width) {
     flex-direction: column;
     align-items: flex-start;
+    padding: 49px 0 0 8px;
   }
 }
 
