--- a/source/sass/level-filter.scss
+++ b/source/sass/level-filter.scss
@@ -8,6 +8,10 @@
     align-items: center;
     margin: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 12px;
+  }
 }
 
 .level-filter__level-controls {
@@ -22,6 +26,10 @@
     min-width: 148px;
     order: 2;
     margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 37px;
   }
 }
 
