--- a/source/sass/tag-list.scss
+++ b/source/sass/tag-list.scss
@@ -25,6 +25,10 @@
     padding: 0 0 0 35px;
     margin-top: -10px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 16px 0 0 53px;
+  }
 }
 
 .tag-list__item {
