--- a/source/sass/wrapper.scss
+++ b/source/sass/wrapper.scss
@@ -6,7 +6,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 60px 60px;
+    padding: 76px 60px 60px 60px;
     display: grid;
     grid-template-columns: 1fr 21.6%;
     gap: 0 85px;
