--- a/source/sass/alphabet.scss
+++ b/source/sass/alphabet.scss
@@ -166,13 +166,33 @@
 }
 
 .alphabet__letter--catalog {
+  background-color: $white;
+
+  @media (min-width: $tablet-width) {
+    background-color: inherit;
+    opacity: 0.3;
+  }
+
   @media (min-width: $desktop-width) {
     justify-content: flex-start;
+    opacity: 1;
+    color: $basic-blue-dark;
   }
 }
 
 .alphabet__letter--selected {
-  background-color: $basic-blue-light;
+  background-color: $basic-blue-dark;
+  color: $white;
+
+  @media (min-width: $tablet-width) {
+    background-color: inherit;
+    color: $basic-blue-dark;
+    opacity: 1;
+  }
+
+  @media (min-width: $desktop-width) {
+    color: $basic-blue-dark;
+  }
 }
 
 .alphabet__countries-list {
