--- a/source/sass/page-body.scss
+++ b/source/sass/page-body.scss
@@ -204,6 +204,14 @@
   text-transform: uppercase;
   padding-top: 26px;
 
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   &::after {
     position: absolute;
     right: -61px;
