--- a/source/sass/filtered.scss
+++ b/source/sass/filtered.scss
@@ -161,8 +161,19 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+
+  &:hover {
+    opacity: 0.6;
+  }
+}
+
+.filtered__link--arrow {
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .filtered__link--active {
   background-color: $basic-yellow;
+  opacity: 1;
 }
