Добавил интерактивность для кнопки фильтра по странам

--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -364,6 +364,11 @@
 
   &:hover {
     background-color: $special-blue-grey-light;
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
   }
 
   &::after {
