--- a/source/sass/tooltip.scss
+++ b/source/sass/tooltip.scss
@@ -1,15 +1,16 @@
 .tooltip {
   display: none;
   position: absolute;
+  z-index: 10;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 10;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 20px;
   height: 56px;
   padding: 0 25px;
+  border-radius: 4px;
   color: $white;
   background-color: $basic-blue;
 
@@ -27,6 +28,10 @@
 
 .tooltip--flags {
   top: 36px;
+}
+
+.tooltip--transport {
+  top: 46px;
 }
 
 .transport-list__item:hover .tooltip {
