--- a/source/sass/user-card.scss
+++ b/source/sass/user-card.scss
@@ -130,23 +130,6 @@
   padding: 1px 0 0 0;
   margin-bottom: 16px;
 
-  &::before {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: -16px;
-    content: "";
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-
-    @media (min-width: $tablet-width) {
-      width: 8px;
-      height: 8px;
-      left: -22px;
-    }
-  }
-
   &:hover {
     opacity: 0.7;
   }
@@ -364,4 +347,34 @@
   @media (min-width: $desktop-width) {
     display: none;
   }
+}
+
+.user-card__user-status {
+  display: block;
+  position: absolute;
+  right: -62px;
+  top: 8px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+
+  @media (min-width: $tablet-width) {
+    right: -33px;
+    top: 10px;
+    width: 8px;
+    height: 8px;
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 26px;
+    top: 41px;
+  }
+}
+
+.user-card__user-status--offline {
+  background-color: $special-red;
+}
+
+.user-card__user-status--online {
+  background-color: $special-green;
 }
