--- a/source/sass/flag-list.scss
+++ b/source/sass/flag-list.scss
@@ -69,4 +69,9 @@
 .flag-list--two-flags {
   padding-top: 10px;
   margin-bottom: 3px;
+
+  @media (min-width: $desktop-width) {
+    padding-top: 11px;
+    margin-bottom: 0;
+  }
 }
