Поправил PixelPerfect для десктопной версии страницы каталога

--- a/source/sass/continents.scss
+++ b/source/sass/continents.scss
@@ -40,6 +40,10 @@
   &:last-child {
     margin-right: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 32px;
+  }
 }
 
 .continents__link {
