--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -329,6 +329,7 @@
 
 .button--minimize {
   display: none;
+  position: relative;
   width: 100%;
   padding: 10px 10px 9px 10px;
   font-style: normal;
@@ -340,14 +341,39 @@
   border-radius: 20px;
   background-color: $special-blue-grey;
 
+  &::before {
+    position: absolute;
+    left: 95px;
+    top: 12px;
+    width: 14px;
+    height: 14px;
+    content: "";
+    background-image: url("../img/icon-close-filter.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @media (min-width: $tablet-width) {
+      left: 288px;
+      top: 37px;
+      width: 24px;
+      height: 24px;
+      background-size: 24px 24px;
+    }
+
+    @media (min-width: $desktop-width) {
+      left: 45%;
+    }
+  }
+
   @media (min-width: $tablet-width) {
+    padding: 42px 0 38px 35px;
     font-size: 20px;
     line-height: 20px;
     order: 4;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 40px 0;
+    letter-spacing: 0.01em;
   }
 }
 
@@ -428,6 +454,10 @@
     line-height: 20px;
     padding: 18px 73px 12px 71px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 53px;
+  }
 }
 
 .button--catalog {
@@ -456,6 +486,10 @@
     left: 44px;
   }
 }
+
+// .button--two-flags {
+//   top: 20px;
+// }
 
 .button--previous {
   padding: 0;
@@ -487,9 +521,21 @@
     background-image: url("../img/icon-close-filter.svg");
     width: 25px;
     height: 25px;
+
+    @media (min-width: $desktop-width) {
+      top: 27px;
+      right: 58px;
+    }
   }
 }
 
 .button--visible {
   display: block;
 }
+
+// .button__close-icon {
+//   @media (min-width: $tablet-width) {
+//     width: 22px;
+//     height: 24px;
+//   }
+// }
